# IOT_SMART_HOME

./: .gitignore  README.md  distance_calculator.py  requirements.txt
apps/ac/: README.md  ac.py  publisher.py  pyproject.toml  subscriber.py
apps/humidity_control_panel/: control.py  gui.py  main.py
code/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
code/apps/humidity_control_panel/: pyproject.toml
code/emulators/application/: README.md  gui.py  main.py  pyproject.toml
code/emulators/application/gui/: app.py  map_panel.py
code/emulators/application/src/: .gitignore  environment.py  main.py
code/emulators/application/src/common/: constants.py  environment.py  structs.py  utils.py
code/emulators/application/src/dal/: audio.py
code/emulators/application/src/gps_sensor/: __init__.py  gps_sensor.py
code/emulators/application/src/gui/: __init__.py  app.py  map_panel.py  record_control.py
code/emulators/application/src/network_interface/: network_interface.py
code/emulators/application/src/simulation/: user_location_route.txt
code/emulators/application/src/simulation_files/: user_location_route.txt
code/emulators/collar_location_client/: collar.py  environment.py  gps_sensor.py  pyproject.toml  updates_controller.py
code/emulators/collar_location_client/src/: constants.py  environment.py  main.py  test_unpack_location.py
code/emulators/collar_location_client/src/common/: constants.py  environment.py
code/emulators/collar_location_client/src/gps/: __init__.py  factory.py  simulation.py
code/emulators/collar_location_client/src/network_interface/: __init__.py  network_interface.py
code/emulators/collar_location_client/src/simulation_files/: location_route.txt  pet_location_route.txt
code/emulators/collar_location_client/src/updates_controller/: __init__.py  updates_controller.py
code/emulators/collar_speaker_client/: pyproject.toml
code/emulators/collar_speaker_client/src/: main.py
code/emulators/collar_speaker_client/src/common/: constants.py  environment.py
code/emulators/collar_speaker_client/src/network_interface/: network_interface.py
code/emulators/humidity_control_panel/: control.py  gui.py  pyproject.toml
code/shared/audio/: README.md  audio.py  audio_device_contoller.py  pyproject.toml
code/shared/distance_calculator/: pyproject.toml
code/shared/gps/distance_calculator/: pyproject.toml  test_distance_calculator.py
code/shared/location/gps_sensor/: gps_sensor.py  helpers.py  pyproject.toml
code/shared/location/route_calculator/: pyproject.toml  route_calculator.py
code/shared/mqtt/instant_mqtt_client/: instant_mqtt_client.py  pyproject.toml
code/shared/mqtt/paho_basic_callbacks/: paho_basic_callbacks.py  pyproject.toml
code/shared/mqtt/paho_message_router/: paho_message_router.py  pyproject.toml
shared/distance_calculator/: README.md  distance_calculator.py
shared/mqtt/instant_mqtt_client/: instant_mqtt_client.py  pyproject.toml
shared/mqtt/paho_basic_callbacks/: README.md  paho_basic_callbacks.py
shared/mqtt/paho_message_router/: test_paho_message_router.py
shared/paho_basic_callbacks/: paho_basic_callbacks.py  pyproject.toml
shared/paho_message_router/: README.md  paho_message_router.py  pyproject.toml  test_paho_message_router.py
util/: distance_calculator.py  test_distance_calculator.py
util/distance_calculator/: test_distance_calculator.py
util/paho_message_router/: test_paho_message_router.py
