[tool.poetry]
name = "iot-smart-home"
version = "0.1.0"
description = ""
authors = ["Shahar Tal <chapo12345@gmail.com>"]
readme = "README.md"
packages = [
    {include = "apps"},
    {include = "shared"}
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
