[tool.poetry]
name = "paho-message-router"
version = "0.1.0"
description = ""
authors = ["Shahar Tal <chapo12345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
paho-mqtt = "^1.6.1"
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"
pytest-rerunfailures = "^12.0"
mock = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
