[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = [
    "Shahar Tal <stalmail10@gmail.com>",
    "Or Peretz <or3325@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tk = "^0.1.0"
tkintermapview = "^1.29"
pyperclip = "^1.8.2"
distance_calculator = { path = "../../shared/location/distance_calculator" }
route_calculator = { path = "../../shared/location/route_calculator" }
gps-sensor = { path = "../../shared/location/gps_sensor" }
instant-mqtt-client = { path = "../../shared/mqtt/instant_mqtt_client" }
audio = { path = "../../shared/audio" }
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
