[tool.poetry]
name = "collar-location-client"
version = "0.1.0"
description = ""
authors = [
    "Shahar Tal <stalmail10@gmail.com>",
    "Or Peretz <or3325@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
instant-mqtt-client = { path = "../../shared/mqtt/instant_mqtt_client" }
gps-sensor = { path = "../../shared/location/gps_sensor" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
