[tool.poetry]
name = "humidity-control-panel"
version = "0.1.0"
description = ""
authors = [
    "Shahar Tal <stalmail10@gmail.com>",
    "Or Peretz <or3325@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
instant-mqtt-client = { path = "../../shared/mqtt/instant_mqtt_client" }
tk = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
