[tool.poetry]
name = "distance-calculator"
version = "0.1.0"
description = ""
authors = [
    "Shahar Tal <stalmail10@gmail.com>",
    "Or Peretz <or3325@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
