[tool.poetry]
name = "route-calculator"
version = "0.1.0"
description = ""
authors = ["Shahar Tal <stalmail10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
osmnx = "^1.5.1"
networkx = "^3.1"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
