[tool.poetry]
name = "instant-mqtt-client"
version = "0.1.0"
description = ""
authors = [
    "Shahar Tal <stalmail10@gmail.com>",
    "Or Peretz <or3325@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.11"
paho-message-router = { path = "../paho_message_router" }
paho-basic-callbacks = { path = "../paho_basic_callbacks" }
paho-mqtt = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
